--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -1,37 +1,40 @@
 <app-navbar></app-navbar>
 
 <ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col sizeMd="4" sizeSm="12" style="padding-right: 2rem;">
-        <div>
-          <ion-avatar class="avatar">
-            <img [src]="perfil?.usuario.imagenPerfil">
-          </ion-avatar>
-        </div>
-      </ion-col>
-      <ion-col sizeMd="2">
-        <ion-label>{{perfil?.usuario.nombre+' '+ perfil?.usuario.apellido}}</ion-label>
-        <br>
-        <ion-label style="color: var(--ion-color-medium);">@{{perfil?.usuario.nickname}}</ion-label>
-        <br>
-        <ion-label style="font: bold;">30 </ion-label>
-        <ion-label>Contactos</ion-label>
-        <br>
-        <ion-label>Pais: {{perfil?.usuario.pais}}</ion-label>
-      </ion-col>
-      <ion-col sizeMd="4">
-        <app-medalla [medalla] = "medalla"></app-medalla>
-      </ion-col>
-      <ion-button *ngIf="!esMiPerfil" (click)="agregarContacto()">{{textoBoton}}</ion-button>
-      <ion-col sizeMd="2">
-        <ion-button routerLink="/modificar-perfil" color="dark" size="small" fill="clear" *ngIf="esMiPerfil">
-          Editar Perfil
-          <ion-icon slot="icon-only" name="settings-outline"></ion-icon>
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <div>
+    <ion-card class="card-profile">
+      <ion-grid>
+        <ion-row>
+          <ion-col sizeMd="3" sizeSm="12" style="padding-right: 2rem;">
+            <div>
+              <ion-avatar class="avatar">
+                <img [src]="perfil?.usuario.imagenPerfil">
+              </ion-avatar>
+            </div>
+          </ion-col>
+          <ion-col class="user-info" sizeMd="3">
+            <ion-label>{{perfil?.usuario.nombre+' '+ perfil?.usuario.apellido}}</ion-label>
+            <br>
+            <ion-label style="color: var(--ion-color-medium);">@{{perfil?.usuario.nickname}}</ion-label>
+            <br>
+            <ion-label style="font: bold;">30 </ion-label>
+            <ion-label>Contactos</ion-label>
+            <br>
+            <ion-label>Pais: {{perfil?.usuario.pais}}</ion-label>
+          </ion-col>
+          <ion-col sizeMd="4">
+            <app-medalla [medalla] = "medalla"></app-medalla>
+          </ion-col>
+          <ion-button *ngIf="!esMiPerfil" (click)="agregarContacto()">{{textoBoton}}</ion-button>
+          <ion-col sizeMd="2">
+            <ion-button class="edit-button" routerLink="/modificar-perfil" color="dark" size="small" fill="clear" *ngIf="esMiPerfil">
+              Editar
+              <ion-icon slot="icon-only" name="settings-outline"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card>
 
     <div class="publicaciones">
       <ion-grid class="grid" fixed>
@@ -45,5 +48,3 @@
       </ion-grid>
     </div>
 </div>
-
-</ion-content>
