--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,7 +5,7 @@
     <ion-row>
       <ion-col size="3"></ion-col>
       <ion-col class="publicacion-wrap" style="background-color: white;" sizeSm="6" size="12" >
-        <app-alta-publicacion></app-alta-publicacion>
+        <app-alta-publicacion [evento] = "false"></app-alta-publicacion>
       </ion-col>
       <ion-col sizeSm="3" size="12" >
         <ion-card style="background:white">
